k8sFile/Jenkins71test/Jenkins/jenkins-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: jenkins-ingress000
  namespace: kube-jenkins-test
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: jenkins-k8s.jiedai361.com
    http:
      paths:
      - backend:
          serviceName: jenkins000
          servicePort: 31234
